Reworked parser (w/out output to xlsx).